--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
     "require": {
         "gorkalaucirica/hipchat-v2-api-client": "~1.3",
         "illuminate/support": "~4.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Heimonsy\\": "src/Heimonsy"
+        }
     }
 }
